--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
+rand = "0.7"
 chrono = "0.4"
 timeago = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -13,6 +14,7 @@ serde_json = "1.0"
 reqwest = { version = "0.10", features = ["blocking"]}
 dotenv = "0.15.0"
 cached = "0.11"
+graphql_client = "0.9.0"
 
 [dependencies.serenity]
 default-features = true
