--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["emma <kanbaru@iscute.dev>"]
 edition = "2018"
 
 [dependencies]
-log = "0.4"
+log = "0.4.8"
 rand = "0.7"
 chrono = "0.4"
 timeago = "0.2.0"
@@ -15,6 +15,8 @@ reqwest = { version = "0.10", features = ["blocking"]}
 dotenv = "0.15.0"
 cached = "0.11"
 graphql_client = "0.9.0"
+regex = "1.3.7"
+pretty_env_logger = "0.4.0"
 
 [dependencies.tokio]
 version = "=0.2.13"
