updated to good lib util library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ regex = "1.3.9"
 pretty_env_logger = "0.4.0"
 aspotify = "0.3.0"
 lazy_static = "1.4.0"
+sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono", "json" ] }
+heim = { version = "0.1.0-beta.2", features = ["memory", "process"] }
 
 [dependencies.tokio]
 version = "=0.2.13"
