--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build and push the Docker image
-    - uses: whoan/docker-build-with-cache-action@v5
+      uses: whoan/docker-build-with-cache-action@v5
       with:
         username: notkanbaru
         password: "${{ secrets.GITHUB_TOKEN }}"  # you don't need to manually set this secret. GitHub does it on your behalf
