--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Create archive
         run: |
-          sh ci/before_deploy.sh
+          sh scripts/before_deploy.sh
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
