--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,17 @@ aspotify = "0.5.0"
 lazy_static = "1.4.0"
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite", "chrono", "json" ] }
 heim = { version = "0.1.0-beta.2", features = ["memory", "process"] }
+chrono-humanize = "0.0.11"
+two_timer = "2.1.0"
+futures = "0.3.5"
+humantime = "2.0.1"
 
 [dependencies.tokio]
 version = "0.2"
 features = ["full"]
 
 [dependencies.serenity]
-git = "https://github.com/Lakelezz/serenity/"
-branch = "await"
+git = "https://github.com/serenity-rs/serenity"
+branch = "next"
 default-features = false
 features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "native_tls_backend", "absolute_ratelimits", "collector"]
