--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ regex = "1.3.9"
 pretty_env_logger = "0.4.0"
 aspotify = "0.5.0"
 lazy_static = "1.4.0"
-sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite", "chrono", "json" ] }
+sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite", "chrono", "json", "offline" ] }
 heim = { version = "0.1.0-beta.2", features = ["memory", "process"] }
 chrono-humanize = "0.0.11"
 two_timer = "2.1.0"
