--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ regex = "1.3.9"
 pretty_env_logger = "0.4.0"
 aspotify = "0.5.0"
 lazy_static = "1.4.0"
-sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "sqlite", "chrono", "json", "offline" ] }
 heim = { git = "https://github.com/heim-rs/heim", features = ["memory", "process"] }
 chrono-humanize = "0.0.11"
 two_timer = "2.1.0"
@@ -27,17 +26,22 @@ futures = "0.3.5"
 humantime = "2.0.1"
 parking_lot = "0.11.1"
 
+[dependencies.sqlx]
+git = "https://github.com/launchbadge/sqlx"
+default-features = false
+features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "chrono", "json" ]
+
 [dependencies.tokio]
-version = "0.2"
+version = "1.0"
 features = ["full"]
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity"
 branch = "next"
 default-features = false
-features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "native_tls_backend", "absolute_ratelimits", "collector"]
+features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "rustls_backend", "absolute_ratelimits", "collector"]
 
 [dependencies.songbird]
 git = "https://github.com/kanbaru/songbird"
 branch = "next"
-features = ["driver","gateway","serenity-native"]
+features = ["driver","gateway","serenity-rustls"]
