--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ parking_lot = "0.11.1"
 git = "https://github.com/launchbadge/sqlx"
 default-features = false
 branch = "master"
-features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "chrono", "json" ]
+features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "chrono", "json", "offline" ]
 
 [dependencies.tokio]
 version = "1.0"
