--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "maki"
 version = "0.1.1"
-authors = ["emma <kanbaru@iscute.dev>"]
+authors = ["Emma Bridgers <kanbaru@iscute.dev>"]
 edition = "2018"
+resolver = "2"
 
 [dependencies]
 log = "0.4.8"
@@ -25,11 +26,11 @@ two_timer = "2.1.0"
 futures = "0.3.5"
 humantime = "2.0.1"
 parking_lot = "0.11.1"
+# todo: remove later
+indexmap = "=1.6.2"
 
 [dependencies.sqlx]
-git = "https://github.com/launchbadge/sqlx"
-default-features = false
-branch = "master"
+version = "0.5.5"
 features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "chrono", "json", "offline" ]
 
 [dependencies.tokio]
