--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4"
 timeago = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["blocking"]}
+reqwest = "0.11"
 dotenv = "0.15.0"
 cached = "0.11"
 graphql_client = "0.9.0"
@@ -20,7 +20,7 @@ regex = "1.3.9"
 pretty_env_logger = "0.4.0"
 aspotify = "0.5.0"
 lazy_static = "1.4.0"
-heim = { git = "https://github.com/heim-rs/heim", features = ["memory", "process"] }
+heim = { git = "https://github.com/heim-rs/heim", rev = "b292f1535bb27c03800cdb7509fa81a40859fbbb", features = ["memory", "process"] }
 chrono-humanize = "0.0.11"
 two_timer = "2.1.0"
 futures = "0.3.5"
@@ -47,3 +47,7 @@ features = ["builder", "cache", "client", "framework", "gateway", "http", "model
 git = "https://github.com/kanbaru/songbird"
 branch = "next"
 features = ["driver","gateway","serenity-rustls"]
+
+
+[patch.crates-io]
+darwin-libproc = {git = "https://github.com/Orycterope/darwin-libproc", branch = "dependencies_versions"}
